--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -136,8 +136,8 @@ circle {
     fill: none;
     stroke: #d4e7fd;
     stroke-width: 7%;
-    cx: 50;
-    cy: 50;
+    cx: 50%;
+    cy: 50%;
     r: 46%;
 }
 
